--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |form| %>
+<%= form_for([@user, @article]) do |form| %>
   <div>
     <%= form.label :title, "Title" %>
     <%= form.text_field :title, placeholder: "Article Title" %>
