--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     Signed in as: <%= current_user.email %>
     <%= link_to 'Sign out', sign_out_path, method: :delete %>
       <% if current_user.admin? %>
-        <%= link_to "Add Content", new_user_article_path(current_user) %>
+        <%= link_to "Add Content", new_article_path %>
       <% end %>
     <div id="dashboard-link">
       <%= link_to "Back to Front Page", root_path %>
