--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     </div>
   <% else %>
     <%= link_to 'Sign in', sign_in_path %>
+    <%= link_to 'Sign up', sign_up_path %>
   <% end %>
 
   <div id="flash">
