--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -4,7 +4,7 @@
   <% if article == @team.articles.last %>
     <div id="newest-article">
       <h3><%= link_to article.title.upcase, article %><br>
-      Posted by xxxxxxxx at <%= article.created_at %>
+        Posted by <%= @article.user %>  xxxxxxxx at <%= article.created_at %>
       <p><%= truncate(article.body, length: 100) %></h3>
     </div>
   <% else %>
